--- a/src/behaviors/fab-animation-behavior.html
+++ b/src/behaviors/fab-animation-behavior.html
@@ -47,7 +47,7 @@
       },
       animateEditViewFab:function(){
         //this.$.editFab.style.left=this.$$(".pageCard").offsetLeft + this.$$(".pageCard").offsetWidth + (this.$$(".pageCard").offsetWidth*.05) + "px";
-        this.$.editFab.style.right = ((window.offsetWidth - 256) * .05) + "px";
+        this.$.editFab.style.right = "5%";
         this.playAnimation("editState", "edit");
       },
       animateMultiViewFab:function(){
@@ -56,7 +56,7 @@
       _neonAnimationFinish:function(e){
         if(e.detail==="edit"){
           console.log(window.innerWidth);
-          this.$.editFab.style.right = ((window.innerWidth - 256) * .05) + 256 + "px";
+          this.$.editFab.style.right = "5%";
           //this.$.editFab.style.left=this.$$(".pageCard").offsetLeft + this.$$(".pageCard").offsetWidth + (this.$$(".pageCard").offsetWidth*.05) + "px";
           this.$.regFab.style.opacity=0;
           this.$.regFab.disabled=true;
