--- a/src/pages/test/test-test.html
+++ b/src/pages/test/test-test.html
@@ -4,12 +4,22 @@
 <link rel="import" href="../../../bower_components/polymerfire/firebase-document.html" />
 <link rel="import" href="../../../bower_components/paper-input/paper-input.html" />
 <link rel="import" href="../../../bower_components/paper-button/paper-button.html" />
+<link rel="import" href="../../../bower_components/paper-checkbox/paper-checkbox.html" />
 
 <dom-module id="test-test">
   <template>
 
   <firebase-query
+    id="origDB"
+    app-name="main"
+    path="test"
+    data="{{origData}}">
+  </firebase-query>
+
+  <firebase-query
     id="testsDB"
+    order-by-child="archived"
+    equal-to="false"
     app-name="main"
     path="test"
     data="{{testsData}}">
@@ -27,6 +37,7 @@
         margin: 50px 10% 50px 10%;
         width:80%;
         min-height:700px;
+        padding: 20px;
       }
 
     </style>
@@ -34,16 +45,26 @@
     <paper-card class="main">
       <h1>add to query area</h1>
       <paper-input label="position" value="{{current}}"></paper-input>
-      <paper-input label="one" value="{{testData.one}}"></paper-input>
-      <paper-input label="two" value="{{testData.two}}"></paper-input>
+      <paper-input label="name" value="{{testData.name}}"></paper-input>
+      <paper-input label="last name" value="{{testData.lName}}"></paper-input>
+      <paper-checkbox checked="{{testData.archived}}">archived</paper-checkbox>
+      <br />
       <paper-button on-tap="nuke">nuke</paper-button>
 
-      <h1>repeat area</h1>
-      <template is="dom-repeat" items="{{testsData}}" as="test">
+      <h1>orig area</h1>
+      <template is="dom-repeat" items="{{origData}}" as="orig">
         <p>
-          [[test.one]] : [[test.two]]
+          [[orig.name]]
         </p>
       </template>
+
+      <h1>test area</h1>
+      <template is="dom-repeat" items="{{testsData}}" as="test">
+        <p>
+          [[test.name]]
+        </p>
+      </template>
+
     </paper-card>
 
   </template>
@@ -80,7 +101,8 @@
         },
 
         nuke: function() {
-          this.set("testData", []);
+          console.log(this.testsData);
+          this.set("testsData", []);
         }
 
       });
