--- a/src/styles/app-shell-styles.html
+++ b/src/styles/app-shell-styles.html
@@ -505,6 +505,21 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
       background-color: #e51561;
     }
 
+    .overflow-selected {
+      position: relative;
+    }
+
+    .overflow-selected::before {
+      content: ' ';
+      position: absolute;
+      width: 100%;
+      height: 2px;
+      background-color: #3d4ba8;
+      bottom: 0;
+      left: 0;
+      z-index: 3;
+    }
+
     </style>
   </template>
 </dom-module>
