--- a/src/elements/guuey-verify/guuey-verify.html
+++ b/src/elements/guuey-verify/guuey-verify.html
@@ -375,7 +375,7 @@
             },
 
             changePasswordVerifyEmail: function(email) {
-              this.$.verifyEmailCall.url = "http://localhost:3000/verify/verifyEmail";
+              this.$.verifyEmailCall.url = "https://glacial-tor-36526.herokuapp.com/verify/verifyEmail";
               this.$.verifyEmailCall.body = {
                 email: email
               };
