--- a/src/pages/admin/ad-payment.html
+++ b/src/pages/admin/ad-payment.html
@@ -612,7 +612,7 @@
                 token: token
               };
 
-              this.$.stripeCustomerCall.url = "http://localhost:3000/payments/customerinfo";
+              this.$.stripeCustomerCall.url = "https://glacial-tor-36526.herokuapp.com/payments/customerinfo";
               this.$.stripeCustomerCall.generateRequest();
             }.bind(this));
         },
@@ -623,7 +623,7 @@
                 request: "listPlans",
                 token: token
               };
-              this.$.listPlansCall.url = "http://localhost:3000/payments/listplans"
+              this.$.listPlansCall.url = "https://glacial-tor-36526.herokuapp.com/payments/listplans"
               this.$.listPlansCall.generateRequest();
             }.bind(this));
         },
@@ -708,7 +708,7 @@
           } else {
             this.user.getToken()
               .then(function(token) {
-                this.$.initSubCall.url = "http://localhost:3000/payments/initialsub";
+                this.$.initSubCall.url = "https://glacial-tor-36526.herokuapp.com/payments/initialsub";
                 this.$.initSubCall.body = {
                   stripeToken: res.id,
                   home: this.params.home,
@@ -727,7 +727,7 @@
           } else {
             this.user.getToken()
               .then(function(token) {
-                this.$.addCardCall.url = "http://localhost:3000/payments/addcard";
+                this.$.addCardCall.url = "https://glacial-tor-36526.herokuapp.com/payments/addcard";
                 this.$.addCardCall.body = {
                   stripeToken: res.id,
                   customerId: this.customer.customerID,
@@ -779,7 +779,7 @@
         confirmDeleteCard:function(cardId){
           this.user.getToken()
             .then(function(token){
-              this.$.deleteCardCall.url = "http://localhost:3000/payments/deletecard";
+              this.$.deleteCardCall.url = "https://glacial-tor-36526.herokuapp.com/payments/deletecard";
               this.$.deleteCardCall.body = {
                 customerId: this.customer.customerID,
                 cardId: cardId,
@@ -799,7 +799,7 @@
         confirmSetDefaultCard:function(cardId){
           this.user.getToken()
             .then(function(token){
-              this.$.defaultCardCall.url = "http://localhost:3000/payments/setdefaultcard";
+              this.$.defaultCardCall.url = "https://glacial-tor-36526.herokuapp.com/payments/setdefaultcard";
               this.$.defaultCardCall.body = {
                 customerId: this.customer.customerID,
                 cardId: cardId,
@@ -828,7 +828,7 @@
                 users: this.userCount,
                 token: token
               };
-              this.$.addPlanCall.url = "http://localhost:3000/payments/addplan";
+              this.$.addPlanCall.url = "https://glacial-tor-36526.herokuapp.com/payments/addplan";
               this.$.addPlanCall.generateRequest();
             }.bind(this));
 
@@ -853,7 +853,7 @@
                 subId: subId,
                 token: token
               };
-              this.$.deletePlanCall.url = "http://localhost:3000/payments/deleteplan";
+              this.$.deletePlanCall.url = "https://glacial-tor-36526.herokuapp.com/payments/deleteplan";
               this.$.deletePlanCall.generateRequest();
             }.bind(this));
         },
@@ -864,7 +864,7 @@
                 customerId:this.customer.customerID,
                 token: token
               };
-              this.$.chargesCall.url="http://localhost:3000/payments/getcharges";
+              this.$.chargesCall.url="https://glacial-tor-36526.herokuapp.com/payments/getcharges";
               this.$.chargesCall.generateRequest();
             }.bind(this));
         },
